@@ -1,5 +1,10 @@
 package com.williamcallahan.javachat.service;
 
+import com.fasterxml.jackson.databind.DeserializationFeature;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import jakarta.annotation.PostConstruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.ai.document.Document;
@@ -12,7 +17,7 @@ import org.springframework.stereotype.Service;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.security.InvalidParameterException;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
@@ -33,28 +38,88 @@ import java.util.concurrent.TimeUnit;
 public class EmbeddingCacheService {
     private static final Logger CACHE_LOG = LoggerFactory.getLogger("EMBEDDING_CACHE");
     
+    private final ObjectMapper cacheMapper;
     private final Path cacheDir;
     private final EmbeddingModel embeddingModel;
     private final VectorStore vectorStore;
     /** In-memory cache for fast lookup of computed embeddings */
-    private final Map<String, CachedEmbedding> memoryCache = new ConcurrentHashMap<>();
+    private final Map<String, EmbeddingCacheEntry> memoryCache = new ConcurrentHashMap<>();
+    private final EmbeddingCacheFileImporter cacheFileImporter;
     private final AtomicInteger cacheHits = new AtomicInteger(0);
     private final AtomicInteger cacheMisses = new AtomicInteger(0);
-    private final AtomicInteger embeddingsSinceLastSave = new AtomicInteger(0);
-    private static final int AUTO_SAVE_THRESHOLD = 50; // Save every 50 embeddings
-    private final ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
+	private final AtomicInteger embeddingsSinceLastSave = new AtomicInteger(0);
+	private static final int AUTO_SAVE_THRESHOLD = 50; // Save every 50 embeddings
+	private final ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
+    private final Object cacheFileLock = new Object();
 
-    
+	/**
+	 * Wraps cache persistence failures as a runtime exception suitable for Spring initialization paths.
+	 */
+	private static final class EmbeddingCacheOperationException extends IllegalStateException {
+		private EmbeddingCacheOperationException(String message, Exception cause) {
+			super(message, cause);
+		}
+	}
+
+    /**
+     * Validates filename and resolves to a safe path within cacheDir.
+     * Prevents path traversal attacks by ensuring the resolved path stays within bounds.
+     *
+     * @param filename the filename to validate
+     * @return the validated, normalized path
+     * @throws InvalidParameterException if filename would escape cacheDir
+     */
+	    private Path validateAndResolvePath(String filename) {
+        if (filename == null || filename.isBlank()) {
+            throw new InvalidParameterException("Filename cannot be null or blank");
+        }
+        // Reject obvious path traversal attempts and path separators
+        if (filename.contains("..")
+            || filename.startsWith("/")
+            || filename.contains(":")
+            || filename.contains("/")
+            || filename.contains("\\")) {
+            throw new InvalidParameterException("Invalid filename: path traversal not allowed");
+        }
+        Path resolved = cacheDir.resolve(filename).normalize();
+        // Verify resolved path is still within cacheDir
+        if (!resolved.startsWith(cacheDir.normalize())) {
+            throw new InvalidParameterException("Invalid filename: resolved path escapes cache directory");
+        }
+	        return resolved;
+	    }
+
+    /**
+     * Creates an embedding cache service rooted at the configured cache directory.
+     */
     public EmbeddingCacheService(
             @Value("${app.embeddings.cache-dir:./data/embeddings-cache}") String cacheDir,
             EmbeddingModel embeddingModel,
-            VectorStore vectorStore) throws IOException {
-        this.cacheDir = Paths.get(cacheDir);
+            VectorStore vectorStore,
+            ObjectMapper objectMapper) {
+        this.cacheDir = Path.of(cacheDir);
         this.embeddingModel = embeddingModel;
         this.vectorStore = vectorStore;
-        Files.createDirectories(this.cacheDir);
+        this.cacheMapper = objectMapper.copy()
+            .registerModule(new JavaTimeModule())
+            .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS)
+            .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
+        this.cacheFileImporter = new EmbeddingCacheFileImporter(this.cacheMapper);
+    }
+
+	    /**
+	     * Initializes the cache directory and schedules periodic persistence for incremental updates.
+	     */
+	    @PostConstruct
+	    public void initializeCache() {
+        try {
+            Files.createDirectories(cacheDir);
+        } catch (IOException exception) {
+            throw new EmbeddingCacheOperationException("Failed to create cache directory", exception);
+        }
+
         loadExistingCache();
-        
+
         // Register shutdown hook to save cache on exit
         Runtime.getRuntime().addShutdownHook(new Thread(() -> {
             try {
@@ -62,11 +127,12 @@ public class EmbeddingCacheService {
                 CACHE_LOG.info("Saving cache before shutdown...");
                 saveIncrementalCache();
                 CACHE_LOG.info("Cache saved successfully. Total embeddings cached: {}", memoryCache.size());
-            } catch (Exception e) {
-                CACHE_LOG.error("Failed to save cache on shutdown: {}", e.getMessage());
+            } catch (RuntimeException exception) {
+                CACHE_LOG.error("Failed to save cache on shutdown (exception type: {})",
+                    exception.getClass().getSimpleName());
             }
         }));
-        
+
         // Start periodic save timer (every 2 minutes)
         scheduler.scheduleAtFixedRate(() -> {
             try {
@@ -75,38 +141,11 @@ public class EmbeddingCacheService {
                     saveIncrementalCache();
                     embeddingsSinceLastSave.set(0);
                 }
-            } catch (Exception e) {
-                CACHE_LOG.error("Periodic save failed: {}", e.getMessage());
+            } catch (RuntimeException exception) {
+                CACHE_LOG.error("Periodic save failed (exception type: {})",
+                    exception.getClass().getSimpleName());
             }
         }, 2, 2, TimeUnit.MINUTES);
-    }
-    
-    /**
-     * Represents a cached embedding with its content and metadata
-     */
-    public static class CachedEmbedding implements Serializable {
-        public String id;
-        public String content;
-        public float[] embedding;
-        public Map<String, Object> metadata;
-        public LocalDateTime createdAt;
-        public boolean uploaded;
-        
-        public CachedEmbedding() {}
-        
-        public CachedEmbedding(String id, String content, float[] embedding, Map<String, Object> metadata) {
-            this.id = id;
-            this.content = content;
-            this.embedding = embedding;
-            this.metadata = metadata != null ? metadata : new HashMap<>();
-            this.createdAt = LocalDateTime.now();
-            this.uploaded = false;
-        }
-        
-        /** Converts to Spring AI Document */
-        public Document toDocument() {
-            return new Document(content, metadata);
-        }
     }
     
     /**
@@ -119,18 +158,18 @@ public class EmbeddingCacheService {
         List<Document> toCompute = new ArrayList<>();
         Map<Integer, Integer> indexMapping = new HashMap<>();
         
-        for (int i = 0; i < documents.size(); i++) {
-            Document doc = documents.get(i);
-            String cacheKey = generateCacheKey(doc);
-            CachedEmbedding cached = memoryCache.get(cacheKey);
+        for (int documentIndex = 0; documentIndex < documents.size(); documentIndex++) {
+            Document sourceDocument = documents.get(documentIndex);
+            String cacheKey = generateCacheKey(sourceDocument);
+            EmbeddingCacheEntry cachedEmbedding = memoryCache.get(cacheKey);
             
-            if (cached != null) {
-                embeddings.add(cached.embedding);
+            if (cachedEmbedding != null) {
+                embeddings.add(cachedEmbedding.getEmbedding());
                 cacheHits.incrementAndGet();
-                CACHE_LOG.debug("Cache HIT for document: {}", doc.getId());
+                CACHE_LOG.debug("Cache HIT for document");
             } else {
-                toCompute.add(doc);
-                indexMapping.put(toCompute.size() - 1, i);
+                toCompute.add(sourceDocument);
+                indexMapping.put(toCompute.size() - 1, documentIndex);
                 embeddings.add(null);
                 cacheMisses.incrementAndGet();
             }
@@ -146,35 +185,31 @@ public class EmbeddingCacheService {
             
             EmbeddingResponse response = embeddingModel.embedForResponse(texts);
             List<float[]> computedEmbeddings = response.getResults().stream()
-                .map(r -> r.getOutput())
+                .map(embeddingResult -> embeddingResult.getOutput())
                 .collect(Collectors.toList());
             
-            for (int i = 0; i < computedEmbeddings.size(); i++) {
-                Document doc = toCompute.get(i);
-                float[] embedding = computedEmbeddings.get(i);
-                int originalIndex = indexMapping.get(i);
-                embeddings.set(originalIndex, embedding);
+            for (int computedIndex = 0; computedIndex < computedEmbeddings.size(); computedIndex++) {
+                Document sourceDocument = toCompute.get(computedIndex);
+                float[] embeddingVector = computedEmbeddings.get(computedIndex);
+                int originalIndex = indexMapping.get(computedIndex);
+                embeddings.set(originalIndex, embeddingVector);
                 
-                CachedEmbedding cached = new CachedEmbedding(
+                EmbeddingCacheEntry cachedEmbedding = new EmbeddingCacheEntry(
                     UUID.randomUUID().toString(),
-                    doc.getText(),
-                    embedding,
-                    doc.getMetadata()
+                    sourceDocument.getText(),
+                    embeddingVector,
+                    EmbeddingCacheMetadata.fromDocument(sourceDocument)
                 );
                 
-                String cacheKey = generateCacheKey(doc);
-                memoryCache.put(cacheKey, cached);
+                String cacheKey = generateCacheKey(sourceDocument);
+                memoryCache.put(cacheKey, cachedEmbedding);
                 
                 // Auto-save every N embeddings
                 if (embeddingsSinceLastSave.incrementAndGet() >= AUTO_SAVE_THRESHOLD) {
                     CACHE_LOG.info("Auto-saving cache after {} new embeddings...", AUTO_SAVE_THRESHOLD);
-                    try {
-                        saveIncrementalCache();
-                        embeddingsSinceLastSave.set(0);
-                        CACHE_LOG.info("Auto-save completed. Total cached: {}", memoryCache.size());
-                    } catch (Exception e) {
-                        CACHE_LOG.error("Auto-save failed: {}", e.getMessage());
-                    }
+                    saveIncrementalCache();
+                    embeddingsSinceLastSave.set(0);
+                    CACHE_LOG.info("Auto-save completed. Total cached: {}", memoryCache.size());
                 }
             }
             
@@ -189,44 +224,38 @@ public class EmbeddingCacheService {
     }
     
     /**
-     * Exports cache to compressed file
-     * @param filename Name of export file
+     * Exports cache to compressed file.
+     * Validates filename to prevent path traversal attacks per OWASP guidelines.
+     *
+     * @param filename Name of export file (must not contain path separators)
+     * @throws IOException if export fails
+     * @throws InvalidParameterException if filename contains path traversal sequences
      */
     public void exportCache(String filename) throws IOException {
-        Path exportPath = cacheDir.resolve(filename);
-        CACHE_LOG.info("Exporting {} cached embeddings to: {}", memoryCache.size(), exportPath);
-        
-        try (OutputStream fos = Files.newOutputStream(exportPath);
-             GZIPOutputStream gzos = new GZIPOutputStream(fos);
-             ObjectOutputStream oos = new ObjectOutputStream(gzos)) {
-            
-            oos.writeObject(new ArrayList<>(memoryCache.values()));
-            CACHE_LOG.info("Successfully exported cache to: {}", exportPath);
+        Path exportPath = validateAndResolvePath(filename);
+        CACHE_LOG.info("Exporting {} cached embeddings", memoryCache.size());
+
+        synchronized (cacheFileLock) {
+            try (OutputStream fos = Files.newOutputStream(exportPath);
+                 GZIPOutputStream gzos = new GZIPOutputStream(fos)) {
+                cacheMapper.writeValue(gzos, new ArrayList<>(memoryCache.values()));
+                CACHE_LOG.info("Successfully exported cache");
+            }
         }
     }
-    
+
     /**
-     * Imports embeddings from compressed file
-     * @param filename Name of file to import
+     * Imports embeddings from compressed file.
+     * Validates filename to prevent path traversal and applies deserialization filter
+     * to prevent arbitrary code execution per OWASP guidelines.
+     *
+     * @param filename Name of file to import (must not contain path separators)
+     * @throws IOException if import fails
+     * @throws InvalidParameterException if filename contains path traversal sequences
      */
-    public void importCache(String filename) throws IOException, ClassNotFoundException {
-        Path importPath = cacheDir.resolve(filename);
-        CACHE_LOG.info("Importing cached embeddings from: {}", importPath);
-        
-        try (InputStream fis = Files.newInputStream(importPath);
-             GZIPInputStream gzis = new GZIPInputStream(fis);
-             ObjectInputStream ois = new ObjectInputStream(gzis)) {
-            
-            @SuppressWarnings("unchecked")
-            List<CachedEmbedding> imported = (List<CachedEmbedding>) ois.readObject();
-            
-            for (CachedEmbedding embedding : imported) {
-                String cacheKey = generateCacheKey(embedding.content, embedding.metadata);
-                memoryCache.put(cacheKey, embedding);
-            }
-            
-            CACHE_LOG.info("Successfully imported {} embeddings", imported.size());
-        }
+    public final void importCache(String filename) throws IOException {
+        Path importPath = validateAndResolvePath(filename);
+        importCacheFromPath(importPath);
     }
     
     /**
@@ -235,48 +264,53 @@ public class EmbeddingCacheService {
      * @return Number of successfully uploaded embeddings
      */
     public int uploadPendingToVectorStore(int batchSize) {
-        List<CachedEmbedding> pending = memoryCache.values().stream()
-            .filter(e -> !e.uploaded)
+        List<EmbeddingCacheEntry> pendingEmbeddings = memoryCache.values().stream()
+            .filter(cachedEmbedding -> !cachedEmbedding.isUploaded())
             .collect(Collectors.toList());
         
-        if (pending.isEmpty()) {
+        if (pendingEmbeddings.isEmpty()) {
             CACHE_LOG.info("No pending embeddings to upload");
             return 0;
         }
         
         CACHE_LOG.info("Uploading {} pending embeddings to vector store in batches of {}", 
-            pending.size(), batchSize);
+            pendingEmbeddings.size(), batchSize);
         
-        int uploaded = 0;
-        for (int i = 0; i < pending.size(); i += batchSize) {
-            List<CachedEmbedding> batch = pending.subList(i, 
-                Math.min(i + batchSize, pending.size()));
+        int uploadedCount = 0;
+        for (int batchStartIndex = 0; batchStartIndex < pendingEmbeddings.size(); batchStartIndex += batchSize) {
+            int batchEndIndex = Math.min(batchStartIndex + batchSize, pendingEmbeddings.size());
+            List<EmbeddingCacheEntry> batch = pendingEmbeddings.subList(batchStartIndex, batchEndIndex);
             
             List<Document> documents = batch.stream()
-                .map(CachedEmbedding::toDocument)
+                .map(EmbeddingCacheEntry::toDocument)
                 .collect(Collectors.toList());
             
             try {
                 vectorStore.add(documents);
                 
-                for (CachedEmbedding e : batch) {
-                    e.uploaded = true;
+                for (EmbeddingCacheEntry cachedEmbedding : batch) {
+                    cachedEmbedding.setUploaded(true);
                 }
                 
-                uploaded += batch.size();
+                uploadedCount += batch.size();
                 CACHE_LOG.info("Uploaded batch {}/{} ({} embeddings)", 
-                    (i / batchSize) + 1, 
-                    (pending.size() + batchSize - 1) / batchSize,
+                    (batchStartIndex / batchSize) + 1, 
+                    (pendingEmbeddings.size() + batchSize - 1) / batchSize,
                     batch.size());
                 
-            } catch (Exception e) {
-                CACHE_LOG.error("Failed to upload batch starting at index {}: {}", i, e.getMessage());
+            } catch (Exception exception) {
+                CACHE_LOG.error("Failed to upload batch (exception type: {})",
+                    exception.getClass().getSimpleName());
+                throw new EmbeddingCacheOperationException(
+                    "Failed to upload embedding batch starting at index " + batchStartIndex,
+                    exception
+                );
             }
         }
         
         saveIncrementalCache();
-        CACHE_LOG.info("Successfully uploaded {} embeddings to vector store", uploaded);
-        return uploaded;
+        CACHE_LOG.info("Successfully uploaded {} embeddings to vector store", uploadedCount);
+        return uploadedCount;
     }
     
     /**
@@ -289,28 +323,53 @@ public class EmbeddingCacheService {
     }
     
     /**
-     * Returns cache statistics including hit rate and pending uploads
+     * Returns cache statistics including hit rate and pending uploads.
+     *
+     * @return typed cache statistics
      */
-    public Map<String, Object> getCacheStats() {
-        Map<String, Object> stats = new HashMap<>();
-        stats.put("totalCached", memoryCache.size());
-        stats.put("uploaded", memoryCache.values().stream().filter(e -> e.uploaded).count());
-        stats.put("pending", memoryCache.values().stream().filter(e -> !e.uploaded).count());
-        stats.put("cacheHits", cacheHits.get());
-        stats.put("cacheMisses", cacheMisses.get());
-        stats.put("hitRate", getCacheHitRate());
-        stats.put("cacheDirectory", cacheDir.toString());
-        return stats;
+    public CacheStats getCacheStats() {
+        return new CacheStats(
+            memoryCache.size(),
+            memoryCache.values().stream().filter(EmbeddingCacheEntry::isUploaded).count(),
+            memoryCache.values().stream().filter(cachedEmbedding -> !cachedEmbedding.isUploaded()).count(),
+            cacheHits.get(),
+            cacheMisses.get(),
+            getCacheHitRate(),
+            cacheDir.toString()
+        );
     }
+
+    /**
+     * Embedding cache statistics.
+     *
+     * @param totalCached total number of cached embeddings
+     * @param uploaded number of embeddings uploaded to vector store
+     * @param pending number of embeddings waiting to be uploaded
+     * @param cacheHits number of cache hits
+     * @param cacheMisses number of cache misses
+     * @param hitRate cache hit rate (0.0 to 1.0)
+     * @param cacheDirectory path to cache directory
+     */
+    public record CacheStats(
+        long totalCached,
+        long uploaded,
+        long pending,
+        long cacheHits,
+        long cacheMisses,
+        double hitRate,
+        String cacheDirectory
+    ) {}
     
     private void loadExistingCache() {
         Path latestCache = cacheDir.resolve("embeddings_cache.gz");
         if (Files.exists(latestCache)) {
             try {
-                importCache("embeddings_cache.gz");
+                importCacheFromPath(latestCache);
                 CACHE_LOG.info("Loaded existing cache with {} embeddings", memoryCache.size());
-            } catch (Exception e) {
-                CACHE_LOG.warn("Could not load existing cache: {}", e.getMessage());
+            } catch (Exception exception) {
+                CACHE_LOG.error("Could not load existing cache (exception type: {})",
+                    exception.getClass().getSimpleName());
+                throw new EmbeddingCacheOperationException("Failed to load existing cache", exception);
             }
         }
     }
@@ -318,22 +377,69 @@ public class EmbeddingCacheService {
     private void saveIncrementalCache() {
         try {
             exportCache("embeddings_cache.gz");
-        } catch (IOException e) {
-            CACHE_LOG.error("Failed to save incremental cache: {}", e.getMessage());
+        } catch (IOException exception) {
+            CACHE_LOG.error("Failed to save incremental cache (exception type: {})",
+                exception.getClass().getSimpleName());
+            throw new EmbeddingCacheOperationException("Failed to save incremental cache", exception);
         }
     }
     
     private String generateCacheKey(Document doc) {
-        return generateCacheKey(doc.getText(), doc.getMetadata());
+        if (doc == null) {
+            throw new IllegalArgumentException("Document is required");
+        }
+        return generateCacheKey(doc.getText(), EmbeddingCacheMetadata.fromDocument(doc));
     }
     
-    private String generateCacheKey(String content, Map<String, Object> metadata) {
+    private String generateCacheKey(String content, EmbeddingCacheMetadata metadata) {
         StringBuilder key = new StringBuilder();
-        key.append(content.hashCode());
-        if (metadata != null && !metadata.isEmpty()) {
+        String safeContent = content == null ? "" : content;
+        key.append(safeContent.hashCode());
+        if (metadata != null && !metadata.equals(EmbeddingCacheMetadata.empty())) {
             key.append("_").append(metadata.hashCode());
         }
         return key.toString();
+    }
+
+    private void importCacheFromPath(Path importPath) throws IOException {
+        CACHE_LOG.info("Importing cached embeddings");
+
+        synchronized (cacheFileLock) {
+            try (InputStream fileInputStream = Files.newInputStream(importPath);
+                 GZIPInputStream gzipInputStream = new GZIPInputStream(fileInputStream);
+                 BufferedInputStream bufferedInputStream = new BufferedInputStream(gzipInputStream)) {
+
+                List<EmbeddingCacheEntry> importedEmbeddings = cacheFileImporter.read(bufferedInputStream);
+
+                if (importedEmbeddings == null) {
+                    throw new IOException("Unexpected cache format; expected a list of embeddings");
+                }
+
+                for (EmbeddingCacheEntry cachedEmbedding : importedEmbeddings) {
+                    String cacheKey = generateCacheKey(cachedEmbedding.getContent(), cachedEmbedding.getMetadata());
+                    memoryCache.put(cacheKey, cachedEmbedding);
+                }
+
+                CACHE_LOG.info("Successfully imported {} embeddings", importedEmbeddings.size());
+            }
+        }
+    }
+
+    /**
+     * Legacy Java-serialized cache entry used only to import historical caches created before the JSON format.
+     */
+    static final class CachedEmbedding implements Serializable {
+        @Serial
+        private static final long serialVersionUID = -4408107863391743604L;
+
+        boolean uploaded;
+        String content;
+        LocalDateTime createdAt;
+        float[] embedding;
+        String id;
+        Map<?, ?> metadata;
+
+        CachedEmbedding() {}
     }
     
     private double getCacheHitRate() {
